--- a/css/style.css
+++ b/css/style.css
@@ -64,9 +64,32 @@ header{
     background-color: white;
 }
 
-ul{
+
+.main-point{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
+    padding-top: 20px;
     padding-left: 40px;
-    list-style-type: circle;
+    list-style-type: none;
+    
+}
+
+.sub-list{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    padding-top: 10px;
+    padding-left: 0;
+    list-style-type: none;
+}
+
+.cross{
+    color: red;
+    border: 1px solid red;
+    border-radius: 50%;
+}
+
+.check{
+    color: green;
+    border: 1px solid green;
+    border-radius: 50%;
 }
